--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
